# XR

./: README.md  backend_test.py  model.patch  test_result.md
.emergent/: emergent.yml  summary.txt
backend/: .env  server.py
frontend/: .easignore  .env  README.md  app.json  babel.config.js  eas.json  package-lock.json  package.json
frontend/android/: .gitignore  gradle.properties
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/cpp/: CMakeLists.txt  viture_jni.cpp
frontend/android/app/src/main/java/com/anonymous/frontend/: MainApplication.kt
frontend/android/app/src/main/java/com/anonymous/frontend/viture/: VitureModule.kt  VitureNative.kt  ViturePackage.kt
frontend/app/: _layout.tsx
frontend/app/(tabs)/: _layout.tsx  index.tsx  memory.tsx  recognize.tsx  settings.tsx  translate.tsx
frontend/plugins/: withVitureSDK.js
frontend/src/components/: GlowButton.tsx  HUDWidget.tsx  LanguageSelector.tsx
frontend/src/constants/: theme.ts
frontend/src/hooks/: useViture.ts
frontend/src/native/: VitureSDK.ts
frontend/src/store/: hudStore.ts
frontend/src/utils/: api.ts
